Clone detection completed, graph sync complete